Fixed text alignment

--- a/personalwebsite2020/src/Components/Header/Header.css
+++ b/personalwebsite2020/src/Components/Header/Header.css
@@ -1,3 +1,9 @@
 .Website-header {
   background-color: #ffffff;
 }
+
+.Header {
+  text-align: center;
+  margin: auto;
+  background-color: #f0f5f4;
+}
